--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ô MAM'S | Burgers & Street Food Montpellier</title>
+    <title>Ô MAM'S | Officiel</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --primary: #82c91e; --dark: #0b0b0b; --card-bg: #1a1a1a; --white: #fff; }
+        :root { --primary: #82c91e; --dark: #000; --card-bg: #111; --white: #fff; }
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Montserrat', sans-serif; background: var(--dark); color: var(--white); scroll-behavior: smooth; display: flex; }
 
@@ -17,12 +17,12 @@
             left: 0; top: 0; padding: 2rem; border-right: 1px solid #222;
             display: flex; flex-direction: column; z-index: 1000;
         }
-        .nav-logo { width: 100%; margin-bottom: 2rem; border-radius: 10px; }
+        .nav-logo { width: 100%; margin-bottom: 2rem; }
         .nav-links { list-style: none; flex-grow: 1; }
-        .nav-links li { margin-bottom: 1.2rem; }
+        .nav-links li { margin-bottom: 1.5rem; }
         .nav-links a { 
-            color: #888; text-decoration: none; font-weight: 700; font-size: 1rem;
-            transition: 0.3s; display: flex; align-items: center; gap: 12px;
+            color: #888; text-decoration: none; font-weight: 700; font-size: 1.1rem;
+            transition: 0.3s; display: flex; align-items: center; gap: 15px;
         }
         .nav-links a:hover { color: var(--primary); }
         
@@ -35,32 +35,29 @@
         /* CONTENU PRINCIPAL */
         main { margin-left: 280px; width: calc(100% - 280px); }
 
-        section { padding: 5rem 8%; border-bottom: 1px solid #111; }
-        .section-title { margin-bottom: 3rem; }
-        .section-title h2 { font-size: 2.2rem; text-transform: uppercase; font-weight: 900; color: var(--white); }
-        .section-title span { color: var(--primary); }
+        section { padding: 5rem 8%; border-bottom: 1px solid #111; min-height: 100vh; display: flex; flex-direction: column; justify-content: center; }
+        .section-title { margin-bottom: 2rem; }
+        .section-title h2 { font-size: 2.5rem; text-transform: uppercase; font-weight: 900; }
         .section-title div { width: 60px; height: 4px; background: var(--primary); margin-top: 10px; }
 
-        /* MENU CATEGORIES */
-        .cat-title { font-size: 1.5rem; color: var(--primary); margin: 2rem 0 1.5rem; text-transform: uppercase; font-weight: 900; border-left: 4px solid var(--primary); padding-left: 15px; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(240px, 1fr)); gap: 20px; margin-bottom: 3rem; }
-        
-        .card { background: var(--card-bg); border-radius: 15px; overflow: hidden; border: 1px solid #222; transition: 0.3s; }
-        .card:hover { border-color: var(--primary); transform: translateY(-5px); }
-        .card-img { height: 160px; background: #000; }
+        /* GRID BURGERS */
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px; }
+        .card { background: var(--card-bg); border-radius: 15px; overflow: hidden; border: 1px solid #222; }
+        .card-img { height: 180px; }
         .card-img img { width: 100%; height: 100%; object-fit: cover; }
-        .card-info { padding: 1.2rem; }
-        .card-info h3 { font-size: 0.95rem; margin-bottom: 0.5rem; text-transform: uppercase; }
-        .price { font-size: 1.2rem; font-weight: 900; color: var(--white); }
+        .card-info { padding: 1rem; text-align: center; }
+        .card-info h3 { font-size: 1rem; color: var(--primary); margin-bottom: 0.5rem; text-transform: uppercase; }
+        .price { font-size: 1.2rem; font-weight: 900; }
 
-        /* RESPONSIVE */
+        /* IMAGE CARTE */
+        .menu-pdf-img { width: 100%; max-width: 900px; border-radius: 10px; box-shadow: 0 0 30px rgba(130, 201, 30, 0.2); margin: 0 auto; }
+
         @media (max-width: 1024px) {
             body { flex-direction: column; }
-            nav { width: 100%; height: auto; position: sticky; border-right: none; border-bottom: 1px solid #222; padding: 1rem; }
-            .nav-logo { height: 60px; width: auto; margin-bottom: 1rem; }
+            nav { width: 100%; height: auto; position: sticky; padding: 1rem; border-right: none; border-bottom: 1px solid #222; }
             .nav-links { display: none; }
             main { margin-left: 0; width: 100%; }
-            section { padding: 3rem 5%; }
+            section { min-height: auto; padding: 3rem 5%; }
         }
     </style>
 </head>
@@ -69,9 +66,10 @@
     <nav>
         <img src="images/logo-mams.pnj.jpg" alt="Ô MAM'S" class="nav-logo">
         <ul class="nav-links">
-            <li><a href="#about"><i class="fas fa-users"></i> Qui sommes-nous ?</a></li>
-            <li><a href="#menu"><i class="fas fa-utensils"></i> La Carte</a></li>
-            <li><a href="#order"><i class="fas fa-phone-alt"></i> Commander</a></li>
+            <li><a href="#about">Qui sommes-nous ?</a></li>
+            <li><a href="#burgers">Nos Burgers</a></li>
+            <li><a href="#carte">Ma Carte</a></li>
+            <li><a href="#order">Commander</a></li>
         </ul>
         <a href="tel:0745065470" class="btn-nav-call">
             <i class="fas fa-phone-alt"></i> 07 45 06 54 70
@@ -84,97 +82,60 @@
                 <h2>Qui <span>sommes-nous ?</span></h2>
                 <div></div>
             </div>
-            <p style="font-size: 1.1rem; line-height: 1.8; color: #ccc;">
-                L'aventure <b>Ô MAM'S</b> est née de la complicité de <b>deux frères</b> passionnés par l'univers de la street-food. Notre mission ? Proposer à Montpellier des recettes généreuses avec des produits de qualité[cite: 77]. 
-                Que ce soit pour nos burgers signatures, nos tacos à composer ou nos sandwichs gourmands, nous mettons tout notre cœur pour vous régaler comme à la maison, mais avec la touche "Élite".
+            <p style="font-size: 1.2rem; line-height: 1.8; color: #ccc;">
+                Nous sommes <b>deux frères</b> passionnés par la street food. Animés par l'envie de partager notre vision du burger parfait, nous avons ouvert <b>Ô MAM'S</b> pour offrir des produits généreux, frais et une ambiance familiale au cœur de Montpellier. Chaque recette est le fruit de notre complicité et de notre exigence.
             </p>
         </section>
 
-        <section id="order" style="background: #080808; text-align: center;">
+        <section id="burgers">
+            <div class="section-title">
+                <h2>Nos <span>Burgers</span></h2>
+                <div></div>
+            </div>
+            <div class="grid" id="burger-grid"></div>
+        </section>
+
+        <section id="carte" style="background: #080808; text-align: center;">
+            <div class="section-title">
+                <h2>Ma <span>Carte</span></h2>
+                <div></div>
+            </div>
+            <img src="images/burger-Double%20cheese.jpg" alt="Carte Complète" class="menu-pdf-img" style="opacity: 0.8; filter: grayscale(0.5);">
+            <p style="margin-top: 20px; color: #666;">Consultez notre menu complet sur place ou en livraison.</p>
+        </section>
+
+        <section id="order" style="text-align: center;">
             <div class="section-title">
                 <h2>Commander</h2>
                 <div></div>
             </div>
-            <a href="tel:0745065470" style="font-size: 3rem; color: var(--primary); text-decoration: none; font-weight: 900; display: block; margin: 1rem 0;">
-                07 45 06 54 70
-            </a>
-            <p style="color: #888;">Livraison gratuite 7j/7 avec un minimum d'achat[cite: 64].</p>
-            <p style="color: #888; margin-top: 10px;">Ouvert de 11h-15h / 18h-23h (Sauf Vendredi soir uniquement)[cite: 63].</p>
+            <p>Appelez-nous directement :</p>
+            <a href="tel:0745065470" style="font-size: 3rem; color: var(--primary); text-decoration: none; font-weight: 900;">07 45 06 54 70</a>
+            <p style="margin-top: 20px; color: #444;">90 RUE DES BOUISSES, 34070 MONTPELLIER</p>
         </section>
-
-        <section id="menu">
-            <div class="section-title">
-                <h2>Notre <span>Carte</span></h2>
-                <div></div>
-            </div>
-
-            <div class="cat-title">Burgers Signature</div>
-            <div class="grid" id="burgers-grid"></div>
-
-            <div class="cat-title">Sandwichs & Américains</div>
-            <div class="grid" id="sandwiches-grid"></div>
-
-            <div class="cat-title">Tacos & Salades</div>
-            <div class="grid" id="tacos-grid"></div>
-
-            <div class="cat-title">Extras & Desserts</div>
-            <div class="grid" id="extras-grid"></div>
-        </section>
-
-        <footer style="padding: 3rem; text-align: center; color: #444; font-size: 0.8rem; border-top: 1px solid #111;">
-            <p>90 RUE DES BOUISSES, 34070 MONTPELLIER [cite: 77]</p>
-            <p style="margin-top:10px;">Ô MAM'S - VIANDE HALAL [cite: 65]</p>
-        </footer>
     </main>
 
     <script>
-        const categories = {
-            burgers: [
-                { name: "Cheese Burger", price: "3,50€", img: "burger-1.jpg" },
-                { name: "Double Cheese", price: "4,50€", img: "burger-2.jpg" },
-                { name: "Triple Cheese", price: "5,50€", img: "burger-3.jpg" },
-                { name: "Le Big", price: "6,00€", img: "burger-4.jpg" },
-                { name: "Giant Maax", price: "6,00€", img: "burger-5.jpg" },
-                { name: "Le Giant", price: "5,00€", img: "burger-6.jpg" },
-                { name: "Le 180", price: "7,00€", img: "burger-7.jpg" },
-                { name: "Le 360", price: "9,00€", img: "burger-8.jpg" },
-                { name: "Chicken Maax", price: "12,90€", img: "burger-1.jpg" }
-            ],
-            sandwiches: [
-                { name: "Américain", price: "5,00€", img: "burger-4.jpg" },
-                { name: "Kebab", price: "6,50€", img: "burger-6.jpg" },
-                { name: "Maxxi Kebab", price: "8,00€", img: "burger-7.jpg" },
-                { name: "Spécial", price: "7,50€", img: "burger-2.jpg" }
-            ],
-            tacos: [
-                { name: "Tacos M (1 Viande)", price: "6,50€", img: "burger-5.jpg" },
-                { name: "Salade César", price: "8,00€", img: "burger-1.jpg" },
-                { name: "Salade Burrata", price: "10,00€", img: "burger-7.jpg" },
-                { name: "Wrap Chicken", price: "7,00€", img: "burger-3.jpg" }
-            ],
-            extras: [
-                { name: "Tenders (x4)", price: "5,00€", img: "burger-2.jpg" },
-                { name: "Nuggets (x4)", price: "3,90€", img: "burger-5.jpg" },
-                { name: "Tiramisu Oreo", price: "3,00€", img: "burger-8.jpg" }
-            ]
-        };
+        const burgers = [
+            { name: "Cheese Burger", price: "3,50€", img: "burger-1.jpg" },
+            { name: "Double Cheese Burger", price: "4,50€", img: "burger-2.jpg" },
+            { name: "Triple Cheese Burger", price: "5,50€", img: "burger-3.jpg" },
+            { name: "Le Big", price: "6€", img: "burger-4.jpg" },
+            { name: "Le Giant Maax", price: "6€", img: "burger-5.jpg" },
+            { name: "Le Giant", price: "5€", img: "burger-6.jpg" },
+            { name: "Le 180", price: "7€", img: "burger-7.jpg" },
+            { name: "Le 360", price: "9€", img: "burger-8.jpg" }
+        ];
 
-        const render = (id, data) => {
-            document.getElementById(id).innerHTML = data.map(i => `
-                <div class="card">
-                    <div class="card-img"><img src="images/${i.img}" alt="${i.name}"></div>
-                    <div class="card-info">
-                        <h3>${i.name}</h3>
-                        <span class="price">${i.price}</span>
-                    </div>
+        document.getElementById('burger-grid').innerHTML = burgers.map(b => `
+            <div class="card">
+                <div class="card-img"><img src="images/${b.img}" alt="${b.name}"></div>
+                <div class="card-info">
+                    <h3>${b.name}</h3>
+                    <p class="price">${b.price}</p>
                 </div>
-            `).join('');
-        };
-
-        render('burgers-grid', categories.burgers);
-        render('sandwiches-grid', categories.sandwiches);
-        render('tacos-grid', categories.tacos);
-        render('extras-grid', categories.extras);
+            </div>
+        `).join('');
     </script>
 </body>
 </html>
