--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -10,155 +10,69 @@
         :root { --primary: #82c91e; --dark: #000; --card-bg: #111; --white: #fff; }
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Montserrat', sans-serif; background: var(--dark); color: var(--white); scroll-behavior: smooth; display: flex; }
-
-        /* BARRE DE NAVIGATION */
-        nav {
-            width: 280px; height: 100vh; background: #000; position: fixed; 
-            left: 0; top: 0; padding: 2rem 1.5rem; border-right: 1px solid #222;
-            display: flex; flex-direction: column; z-index: 1000;
-        }
+        nav { width: 280px; height: 100vh; background: #000; position: fixed; left: 0; top: 0; padding: 2rem 1.5rem; border-right: 1px solid #222; display: flex; flex-direction: column; z-index: 1000; }
         .nav-logo { width: 100%; height: auto; margin-bottom: 2rem; border-radius: 10px; display: block; }
         .nav-links { list-style: none; flex-grow: 1; }
         .nav-links li { margin-bottom: 1.2rem; }
-        .nav-links a { 
-            color: #888; text-decoration: none; font-weight: 700; font-size: 1rem;
-            transition: 0.3s; display: flex; align-items: center; gap: 12px;
-        }
-        .nav-links a:hover { color: var(--primary); }
-        
-        .btn-nav-call {
-            background: var(--primary); color: #000; text-decoration: none;
-            padding: 15px; border-radius: 12px; font-weight: 900; text-align: center;
-            display: flex; align-items: center; justify-content: center; gap: 10px; margin-bottom: 1rem;
-        }
-
-        /* CONTENU PRINCIPAL */
+        .nav-links a { color: #888; text-decoration: none; font-weight: 700; font-size: 1rem; transition: 0.3s; display: flex; align-items: center; gap: 12px; }
+        .btn-nav-call { background: var(--primary); color: #000; text-decoration: none; padding: 15px; border-radius: 12px; font-weight: 900; text-align: center; display: flex; align-items: center; justify-content: center; gap: 10px; margin-bottom: 1rem; }
         main { margin-left: 280px; width: calc(100% - 280px); min-height: 100vh; }
         section { padding: 5rem 8%; border-bottom: 1px solid #111; min-height: 100vh; display: flex; flex-direction: column; justify-content: center; }
-        .section-title { margin-bottom: 2.5rem; }
         .section-title h2 { font-size: 2.5rem; text-transform: uppercase; font-weight: 900; }
         .section-title span { color: var(--primary); }
-        .section-title div { width: 70px; height: 5px; background: var(--primary); margin-top: 10px; }
-
-        /* GRILLE DE PRODUITS */
         .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(240px, 1fr)); gap: 25px; margin-top: 20px; }
         .card { background: var(--card-bg); border-radius: 15px; overflow: hidden; border: 1px solid #222; transition: transform 0.3s ease; }
-        .card:hover { transform: scale(1.03); }
         .card-img { height: 200px; background: #222; overflow: hidden; }
         .card-img img { width: 100%; height: 100%; object-fit: cover; }
         .card-info { padding: 1.2rem; text-align: center; }
-        .card-info h3 { font-size: 1rem; color: var(--white); margin-bottom: 0.8rem; text-transform: uppercase; font-weight: 800; min-height: 40px; }
-        
         .price-box { display: flex; flex-direction: column; gap: 5px; align-items: center; }
         .p-seul { font-size: 0.85rem; color: #888; }
-        .p-menu { font-size: 1.1rem; color: var(--primary); font-weight: 900; background: rgba(130, 201, 30, 0.1); padding: 4px 12px; border-radius: 6px; border: 1px solid rgba(130, 201, 30, 0.2); }
-
-        /* IMAGES DE LA CARTE */
-        .carte-container { width: 100%; max-width: 800px; margin: 0 auto; }
-        .carte-img { width: 100%; height: auto; border-radius: 15px; border: 2px solid #222; margin-bottom: 20px; display: block; }
-
-        /* RESPONSIVE SMARTPHONE */
-        @media (max-width: 1024px) {
-            body { flex-direction: column; }
-            nav { width: 100%; height: auto; position: relative; padding: 1.5rem; border-right: none; border-bottom: 1px solid #222; }
-            .nav-logo { width: 100px; margin: 0 auto 1.5rem auto; }
-            .nav-links { display: none; }
-            main { margin-left: 0; width: 100%; }
-            section { min-height: auto; padding: 3rem 5%; }
-            .section-title h2 { font-size: 1.8rem; }
-        }
+        .p-menu { font-size: 1.1rem; color: var(--primary); font-weight: 900; background: rgba(130, 201, 30, 0.1); padding: 4px 12px; border-radius: 6px; }
+        @media (max-width: 1024px) { body { flex-direction: column; } nav { width: 100%; height: auto; position: relative; padding: 1.5rem; border-right: none; } .nav-links { display: none; } main { margin-left: 0; width: 100%; } }
     </style>
 </head>
 <body>
-
     <nav>
         <img src="images/logo-mams.pnj.jpg" alt="Ô MAM'S" class="nav-logo">
         <ul class="nav-links">
-            <li><a href="#about"><i class="fas fa-users"></i> L'Équipe</a></li>
-            <li><a href="#menu"><i class="fas fa-hamburger"></i> Nos Plats</a></li>
-            <li><a href="#full-menu"><i class="fas fa-file-alt"></i> Carte Complète</a></li>
-            <li><a href="#order"><i class="fas fa-phone-alt"></i> Contact</a></li>
-            <li><a href="https://www.instagram.com/omams34" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+            <li><a href="#about">Notre Histoire</a></li>
+            <li><a href="#menu">La Carte</a></li>
+            <li><a href="#order">Commander</a></li>
         </ul>
-        <a href="tel:0745065470" class="btn-nav-call">
-            <i class="fas fa-phone-alt"></i> 07 45 06 54 70
-        </a>
+        <a href="tel:0745065470" class="btn-nav-call">07 45 06 54 70</a>
     </nav>
-
     <main>
-        <section id="about">
-            <div class="section-title">
-                <h2>Qui <span>sommes-nous ?</span></h2>
-                <div></div>
-            </div>
-            <p style="font-size: 1.1rem; line-height: 1.6; color: #ccc;">
-                Nous sommes deux frères passionnés par la street food. Animés par l'envie de partager notre vision du burger parfait, nous avons ouvert <b>Ô MAM'S</b> pour offrir des produits généreux, frais et une ambiance familiale au cœur de Montpellier.
-            </p>
-        </section>
-
         <section id="menu">
-            <div class="section-title">
-                <h2>Nos <span>Plats</span></h2>
-                <div></div>
-            </div>
+            <div class="section-title"><h2>Nos <span>Plats</span></h2></div>
             <div class="grid" id="product-grid"></div>
         </section>
-
-        <section id="full-menu" style="background: #080808;">
-            <div class="section-title">
-                <h2>Carte <span>Papier</span></h2>
-                <div></div>
-            </div>
-            <div class="carte-container">
-                <img src="images/menu-1.jpg" alt="Menu Recto" class="carte-img">
-                <img src="images/menu-2.jpg" alt="Menu Verso" class="carte-img">
-            </div>
-        </section>
-
-        <section id="order" style="text-align: center;">
-            <div class="section-title" style="align-items: center; display: flex; flex-direction: column;">
-                <h2>Commander</h2>
-                <div></div>
-            </div>
-            <p style="margin-bottom: 10px;">Cliquez pour nous appeler :</p>
-            <a href="tel:0745065470" style="font-size: 2.5rem; color: var(--primary); text-decoration: none; font-weight: 900; display: block; margin-bottom: 20px;">
-                07 45 06 54 70
-            </a>
-            <p style="color: #888;">90 rue des Bouisses, 34070 Montpellier</p>
-        </section>
     </main>
-
     <script>
         const products = [
-            { name: "Cheese Burger", seul: "3,50€", menu: "6,50€", img: "burger-1.jpg" },
-            { name: "Double Cheese", seul: "4,50€", menu: "7,50€", img: "burger-2.jpg" },
-            { name: "Triple Cheese", seul: "5,50€", menu: "8,50€", img: "burger-3.jpg" },
-            { name: "Le Big", seul: "6,00€", menu: "9,00€", img: "burger-4.jpg" },
-            { name: "Le Giant Maax", seul: "6,00€", menu: "9,00€", img: "burger-5.jpg" },
-            { name: "Le Giant", seul: "5,00€", menu: "8,00€", img: "burger-6.jpg" },
-            { name: "Le 180", seul: "7,00€", menu: "10,00€", img: "burger-7.jpg" },
-            { name: "Le 360", seul: "9,00€", menu: "12,00€", img: "burger-8.jpg" },
+            { name: "Cheese Burger", seul: "3,50€", menu: "5,50€", img: "burger-1.jpg" },
+            { name: "Double Cheese", seul: "4,50€", menu: "6,50€", img: "burger-2.jpg" },
+            { name: "Triple Cheese", seul: "5,50€", menu: "7,50€", img: "burger-3.jpg" },
+            { name: "Le Big", seul: "6,00€", menu: "8,00€", img: "burger-4.jpg" },
+            { name: "Le Giant Maax", seul: "6,00€", menu: "8,00€", img: "burger-5.jpg" },
+            { name: "Le Giant", seul: "5,00€", menu: "7,00€", img: "burger-6.jpg" },
+            { name: "Le 180", seul: "7,00€", menu: "9,00€", img: "burger-7.jpg" },
+            { name: "Le 360", seul: "9,00€", menu: "11,00€", img: "burger-8.jpg" },
             { name: "Le Chèvre Miel", seul: "6,00€", menu: "8,00€", img: "burger-9.jpg" },
             { name: "Le Chicken O MAM'S", seul: "12,90€", menu: "14,90€", img: "burger-10.jpg" },
             { name: "Le O MAM'S", seul: "12,90€", menu: "14,90€", img: "burger-11.jpg" },
             { name: "La César", seul: "8,00€", menu: "9,00€", img: "salade-1.jpg" }
         ];
-
-        const container = document.getElementById('product-grid');
-        if(container) {
-            container.innerHTML = products.map(p => `
-                <div class="card">
-                    <div class="card-img"><img src="images/${p.img}" alt="${p.name}"></div>
-                    <div class="card-info">
-                        <h3>${p.name}</h3>
-                        <div class="price-box">
-                            <span class="p-seul">Seul : <b>${p.seul}</b></span>
-                            <span class="p-menu">Menu : ${p.menu}</span>
-                        </div>
+        document.getElementById('product-grid').innerHTML = products.map(p => `
+            <div class="card">
+                <div class="card-img"><img src="images/${p.img}"></div>
+                <div class="card-info">
+                    <h3>${p.name}</h3>
+                    <div class="price-box">
+                        <span class="p-seul">Seul : ${p.seul}</span>
+                        <span class="p-menu">Menu : ${p.menu}</span>
                     </div>
                 </div>
-            `).join('');
-        }
+            </div>`).join('');
     </script>
 </body>
 </html>
